app-service-rules-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: app-service-rules
  name: app-service-rules
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app-service-rules
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/edgex-network: "true"
        io.kompose.service: app-service-rules
    spec:
      containers:
        - env:
            - name: CLIENTS_CORE_COMMAND_HOST
              value: edgex-core-command
            - name: CLIENTS_CORE_DATA_HOST
              value: edgex-core-data
            - name: CLIENTS_CORE_METADATA_HOST
              value: edgex-core-metadata
            - name: CLIENTS_SUPPORT_NOTIFICATIONS_HOST
              value: edgex-support-notifications
            - name: CLIENTS_SUPPORT_SCHEDULER_HOST
              value: edgex-support-scheduler
            - name: DATABASES_PRIMARY_HOST
              value: edgex-redis
            - name: EDGEX_PROFILE
              value: rules-engine
            - name: EDGEX_SECURITY_SECRET_STORE
              value: "false"
            - name: MESSAGEQUEUE_HOST
              value: edgex-redis
            - name: REGISTRY_HOST
              value: edgex-core-consul
            - name: SERVICE_HOST
              value: edgex-app-rules-engine
            - name: TRIGGER_EDGEXMESSAGEBUS_PUBLISHHOST_HOST
              value: edgex-redis
            - name: TRIGGER_EDGEXMESSAGEBUS_SUBSCRIBEHOST_HOST
              value: edgex-redis
          image: edgexfoundry/app-service-configurable-arm64:2.0.1
          name: edgex-app-rules-engine
          ports:
            - containerPort: 59701
          resources: {}
      hostname: edgex-app-rules-engine
      restartPolicy: Always
status: {}
