database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/edgex-network: "true"
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: CLIENTS_CORE_COMMAND_HOST
              value: edgex-core-command
            - name: CLIENTS_CORE_DATA_HOST
              value: edgex-core-data
            - name: CLIENTS_CORE_METADATA_HOST
              value: edgex-core-metadata
            - name: CLIENTS_SUPPORT_NOTIFICATIONS_HOST
              value: edgex-support-notifications
            - name: CLIENTS_SUPPORT_SCHEDULER_HOST
              value: edgex-support-scheduler
            - name: DATABASES_PRIMARY_HOST
              value: edgex-redis
            - name: EDGEX_SECURITY_SECRET_STORE
              value: "false"
            - name: MESSAGEQUEUE_HOST
              value: edgex-redis
            - name: REGISTRY_HOST
              value: edgex-core-consul
          image: redis:6.2.4-alpine
          name: edgex-redis
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: db-data
      hostname: edgex-redis
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
status: {}
