notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: notifications
  name: notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notifications
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/edgex-network: "true"
        io.kompose.service: notifications
    spec:
      containers:
        - env:
            - name: CLIENTS_CORE_COMMAND_HOST
              value: edgex-core-command
            - name: CLIENTS_CORE_DATA_HOST
              value: edgex-core-data
            - name: CLIENTS_CORE_METADATA_HOST
              value: edgex-core-metadata
            - name: CLIENTS_SUPPORT_NOTIFICATIONS_HOST
              value: edgex-support-notifications
            - name: CLIENTS_SUPPORT_SCHEDULER_HOST
              value: edgex-support-scheduler
            - name: DATABASES_PRIMARY_HOST
              value: edgex-redis
            - name: EDGEX_SECURITY_SECRET_STORE
              value: "false"
            - name: MESSAGEQUEUE_HOST
              value: edgex-redis
            - name: REGISTRY_HOST
              value: edgex-core-consul
            - name: SERVICE_HOST
              value: edgex-support-notifications
          image: edgexfoundry/support-notifications-arm64:2.0.0
          name: edgex-support-notifications
          ports:
            - containerPort: 59860
          resources: {}
      hostname: edgex-support-notifications
      restartPolicy: Always
status: {}
