rulesengine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: rulesengine
  name: rulesengine
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rulesengine
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/edgex-network: "true"
        io.kompose.service: rulesengine
    spec:
      containers:
        - env:
            - name: EDGEX__DEFAULT__PORT
              value: "6379"
            - name: EDGEX__DEFAULT__PROTOCOL
              value: redis
            - name: EDGEX__DEFAULT__SERVER
              value: edgex-redis
            - name: EDGEX__DEFAULT__TOPIC
              value: rules-events
            - name: EDGEX__DEFAULT__TYPE
              value: redis
            - name: KUIPER__BASIC__CONSOLELOG
              value: "true"
            - name: KUIPER__BASIC__RESTPORT
              value: "59720"
          image: lfedge/ekuiper:1.3.0-alpine
          name: edgex-kuiper
          ports:
            - containerPort: 59720
          resources: {}
          volumeMounts:
            - mountPath: /kuiper/data
              name: kuiper-data
      hostname: edgex-kuiper
      restartPolicy: Always
      volumes:
        - name: kuiper-data
          persistentVolumeClaim:
            claimName: kuiper-data
status: {}
