system-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: system
  name: system
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: system
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/edgex-network: "true"
        io.kompose.service: system
    spec:
      containers:
        - env:
            - name: CLIENTS_CORE_COMMAND_HOST
              value: edgex-core-command
            - name: CLIENTS_CORE_DATA_HOST
              value: edgex-core-data
            - name: CLIENTS_CORE_METADATA_HOST
              value: edgex-core-metadata
            - name: CLIENTS_SUPPORT_NOTIFICATIONS_HOST
              value: edgex-support-notifications
            - name: CLIENTS_SUPPORT_SCHEDULER_HOST
              value: edgex-support-scheduler
            - name: DATABASES_PRIMARY_HOST
              value: edgex-redis
            - name: EDGEX_SECURITY_SECRET_STORE
              value: "false"
            - name: EXECUTORPATH
              value: /sys-mgmt-executor
            - name: MESSAGEQUEUE_HOST
              value: edgex-redis
            - name: METRICSMECHANISM
              value: executor
            - name: REGISTRY_HOST
              value: edgex-core-consul
            - name: SERVICE_HOST
              value: edgex-sys-mgmt-agent
          image: edgexfoundry/sys-mgmt-agent-arm64:2.0.0
          name: edgex-sys-mgmt-agent
          ports:
            - containerPort: 58890
          resources: {}
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: system-claim0
      hostname: edgex-sys-mgmt-agent
      restartPolicy: Always
      volumes:
        - name: system-claim0
          persistentVolumeClaim:
            claimName: system-claim0
status: {}
