metadata-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: metadata
  name: metadata
spec:
  ports:
    - name: "59881"
      port: 59881
      targetPort: 59881
  selector:
    io.kompose.service: metadata
status:
  loadBalancer: {}
