notifications-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: notifications
  name: notifications
spec:
  ports:
    - name: "59860"
      port: 59860
      targetPort: 59860
  selector:
    io.kompose.service: notifications
status:
  loadBalancer: {}
