rulesengine-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: rulesengine
  name: rulesengine
spec:
  ports:
    - name: "59720"
      port: 59720
      targetPort: 59720
  selector:
    io.kompose.service: rulesengine
status:
  loadBalancer: {}
