scheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: scheduler
  name: scheduler
spec:
  ports:
    - name: "59861"
      port: 59861
      targetPort: 59861
  selector:
    io.kompose.service: scheduler
status:
  loadBalancer: {}
