system-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: system
  name: system
spec:
  ports:
    - name: "58890"
      port: 58890
      targetPort: 58890
  selector:
    io.kompose.service: system
status:
  loadBalancer: {}
